# gd32_template_clion_led

./: .gitignore  CMakeLists.txt  README  gd32f450z_flash.ld  gd32f4xx_flash.ld
Firmware/CMSIS/GD/GD32F4xx/Include/: gd32f4xx.h
Firmware/CMSIS/GD/GD32F4xx/Source/: system_gd32f4xx.c
Firmware/GD32F4xx_standard_peripheral/Include/: gd32f4xx_fmc.h
Firmware/GD32F4xx_standard_peripheral/Source/: gd32f4xx_enet.c  gd32f4xx_fmc.c  gd32f4xx_gpio.c  gd32f4xx_misc.c  gd32f4xx_rcu.c
Hardware/: battery.c  battery.h  encoder.c  encoder.h  motor.c  motor.h  my_font_35.c
Hardware/LED/: led.c  led.h
Hardware/cst816/: cst816t.c  cst816t.h
Hardware/iic/: i2c.c  i2c.h  soft_i2c.c  soft_i2c.h
Hardware/key/: key.c  key.h
Hardware/lvgl_anim/: lvgl_anim.c  lvgl_anim.h
Hardware/lvgl_event/: lvgl_event.c  lvgl_event.h
Hardware/lvgl_layout/: lvgl_layout.c  lvgl_layout.h
Hardware/lvgl_scrolling/: lvgl_scrolling.c  lvgl_scrolling.h
Hardware/lvgl_style/: lvgl_style.c  lvgl_style.h
Hardware/lvgl_widgets/: lvgl_widgets.c  lvgl_widgets.h
Hardware/pid_ui/: pid_ui.c  pid_ui.h
Hardware/st7789/: st7789.c  st7789.h
Hardware/timer/: bsp_basic_timer.c  bsp_basic_timer.h  timer.c  timer.h
Hardware/usart0/: uart.c  uart.h  usart.c  usart.h  usart0.c  usart0.h
Middlewares/LVGL/GUI/lvgl/: lv_conf.h  lvgl.h
Middlewares/LVGL/GUI/lvgl/examples/: lv_examples.h
Middlewares/LVGL/GUI/lvgl/examples/porting/: lv_port_disp_template.c  lv_port_disp_template.h  lv_port_indev_template.c  lv_port_indev_template.h
Middlewares/LVGL/GUI/lvgl/examples/styles/: lv_example_style_1.c
Middlewares/LVGL/GUI/lvgl/src/hal/: lv_hal_disp.c
Middlewares/LVGL/GUI_APP/demos/: lv_demos.h
Middlewares/LVGL/GUI_APP/demos/stress/assets/: lv_font_montserrat_12_compr_az.c  lv_font_montserrat_16_compr_az.c  lv_font_montserrat_28_compr_az.c
User/: gd32f4xx_it.c  gpio_config.c  gpio_config.h  main.c  main.h
